[gd_scene load_steps=26 format=3 uid="uid://cfgaw1dt27apg"]

[ext_resource type="Script" path="res://Scripts/Player/Player.gd" id="1_kriw8"]
[ext_resource type="Script" path="res://Scripts/StateMachine/StateMachine.gd" id="2_s7cg6"]
[ext_resource type="Script" path="res://Scripts/Player/State/IdlePlayerState.gd" id="3_8e622"]
[ext_resource type="Script" path="res://Scripts/Player/State/WalkingPlayerState.gd" id="4_r7w5s"]
[ext_resource type="Script" path="res://Scripts/Player/State/CrouchingPlayerState.gd" id="5_2fa2u"]
[ext_resource type="Script" path="res://Scripts/Reticule/reticule.gd" id="5_ay810"]
[ext_resource type="Animation" uid="uid://b5uryeynt2kjp" path="res://animation/Walking.res" id="5_rx3ru"]
[ext_resource type="Script" path="res://Scripts/DebugConsole/DebugPanel.gd" id="6_fv2g4"]
[ext_resource type="Script" path="res://Scripts/Player/State/SlidingPlayerState.gd" id="6_rruaa"]
[ext_resource type="Script" path="res://Scripts/Player/State/SprintingPlayerState.gd" id="7_avalo"]
[ext_resource type="Animation" uid="uid://xcjep23y27t2" path="res://animation/Sliding.res" id="8_suaqd"]
[ext_resource type="Script" path="res://Scripts/Player/State/JumpPlayerState.gd" id="8_yx1xl"]
[ext_resource type="Script" path="res://Scripts/Player/State/FallingPlayerState.gd" id="9_e0sng"]
[ext_resource type="Animation" uid="uid://c6hmgj68g4iya" path="res://animation/crouching.res" id="9_eggrb"]
[ext_resource type="Animation" uid="uid://dvdt3pt8pe40v" path="res://animation/Sprinting.res" id="10_sodfl"]
[ext_resource type="Animation" uid="uid://dk5328eugxnbc" path="res://animation/JumpStart.res" id="13_t2wwk"]
[ext_resource type="Animation" uid="uid://bnjaf1xfn5fr2" path="res://animation/JumpEnd.res" id="14_4836f"]
[ext_resource type="PackedScene" uid="uid://b7p70k8b3yck8" path="res://Scenes/weapon.tscn" id="18_c55do"]
[ext_resource type="Resource" uid="uid://cmf4kd2gslrp8" path="res://Item/Weapon/CrowBar/CrowBarResources.tres" id="19_x0m16"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cr2oa"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g0ybh"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0kekq"]
material = SubResource("StandardMaterial3D_g0ybh")

[sub_resource type="Animation" id="Animation_lo5ky"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D:shape:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("CollisionShape3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Head:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.015, 1.8, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Head:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ShapeCast3D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.997294, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PlayerStateMachine/SlidingPlayerState:SPEED")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Head/Camera3D:fov")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [75.0]
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Head:rotation:x")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_etuh5"]
_data = {
"Crouching": ExtResource("9_eggrb"),
"JumpEnd": ExtResource("14_4836f"),
"JumpStart": ExtResource("13_t2wwk"),
"RESET": SubResource("Animation_lo5ky"),
"Sliding": ExtResource("8_suaqd"),
"Sprinting": ExtResource("10_sodfl"),
"Walking": ExtResource("5_rx3ru")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_uxh1d"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("ANIMATIONPLAYER", "CAMERA_CONTROLLER", "CROUCH_SHAPECAST")]
script = ExtResource("1_kriw8")
ANIMATIONPLAYER = NodePath("AnimationPlayer")
CAMERA_CONTROLLER = NodePath("Head/Camera3D")
CROUCH_SHAPECAST = NodePath("ShapeCast3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_cr2oa")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_0kekq")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.015, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("2_s7cg6")
CURRENT_STATE = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("3_8e622")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_r7w5s")

[node name="CrouchingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_2fa2u")

[node name="SlidingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_rruaa")

[node name="SprintingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_avalo")

[node name="JumpPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_yx1xl")

[node name="FallingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_e0sng")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_etuh5")
}

[node name="User Interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="reticule" type="CenterContainer" parent="User Interface" node_paths=PackedStringArray("RETICLE_LINES", "PLAYER_CONTROLLER")]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 267.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ay810")
RETICLE_LINES = [NodePath("top"), NodePath("right"), NodePath("bottom"), NodePath("left")]
PLAYER_CONTROLLER = NodePath("../..")

[node name="left" type="Line2D" parent="User Interface/reticule"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="bottom" type="Line2D" parent="User Interface/reticule"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="right" type="Line2D" parent="User Interface/reticule"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="top" type="Line2D" parent="User Interface/reticule"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Debug Panel" type="PanelContainer" parent="User Interface"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_fv2g4")

[node name="MarginContainer" type="MarginContainer" parent="User Interface/Debug Panel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="User Interface/Debug Panel/MarginContainer"]
layout_mode = 2

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.997294, 0)
shape = SubResource("SphereShape3D_uxh1d")
target_position = Vector3(0, 0.5, 0)
debug_shape_custom_color = Color(1, 1, 0, 1)

[node name="Weapons" type="Node3D" parent="."]

[node name="Weapon" parent="Weapons" instance=ExtResource("18_c55do")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.5, 1, -0.555)
WeaponType = ExtResource("19_x0m16")
